# solarchecker

./: .gitignore  README.md  access_mails.py  build_history_exports.py  main.py  notification_emails.py  process_mail.py  pyproject.toml  report_mappings.py  run_warning_email_tests.py
scripts/: february_history_upload.sh
solarchecker/: __init__.py  access_mails.py  build_history_exports.py  main.py  notification_emails.py  process_mail.py  run_warning_email_tests.py
